RESOLVED FIXED201391
[FTW] NativeImagePtr is drawn with invalid scaling
https://bugs.webkit.org/show_bug.cgi?id=201391
Summary [FTW] NativeImagePtr is drawn with invalid scaling
Brent Fulgham
Reported 2019-09-01 16:06:14 PDT
The current implementation of FTW applies horrible scaling factors to native images, resulting in blocky images (in some cases). This patch corrects the handling of native images, and retrieves more data from the ImageDecoder's metadata system.
Attachments
Patch (7.18 KB, patch)
2019-09-01 16:40 PDT, Brent Fulgham
no flags
Brent Fulgham
Comment 1 2019-09-01 16:35:06 PDT
Also: The API that I was using to create BitmapRenderContexts overrode the screen DPI by passing the same size for the "logical dimensions" and the "pixel dimensions". This patch corrects that mistake. We need to use this API (rather than letting Direct2D handle it) because our software image processing wants to work in 1x dimensions, so those code paths need to be able to supply matching pixel and logical dimensions.
Brent Fulgham
Comment 2 2019-09-01 16:40:32 PDT
WebKit Commit Bot
Comment 3 2019-09-02 14:37:12 PDT
Comment on attachment 377832 [details] Patch Clearing flags on attachment: 377832 Committed r249414: <https://trac.webkit.org/changeset/249414>
WebKit Commit Bot
Comment 4 2019-09-02 14:37:14 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-09-02 14:38:17 PDT
Note You need to log in before you can comment on or make changes to this bug.